# drone-with-object-tracking

./: ArduinoSPI.ino  README.md  SPICommunication.py
ColourDetection/: CMakeLists.txt  ColourTracking.cpp  app  test.cpp
ColourDetection/include/: globals.hpp
ColourDetection/include/detectObject/: detectObject.hpp
ColourDetection/include/fc/: fc.hpp
ColourDetection/include/imageHandler/: imageHandler.hpp
ColourDetection/src/: CMakeLists.txt  ColourTracking.cpp  detectObject.cpp  fc.cpp  imageHandler.cpp  main.cpp  test.cpp
FaceDetection/: FaceTracking.cpp
FacialDetection/: DetectFace.py  FacialTracking.cpp  FacialTracking.py  app  app2  pid.cpp
MultiWii/: Output.cpp  Output.h  config.h
SPI/: ArduinoSPI.ino
ardrone_object_tracking/: CMakeLists.txt  package.xml
cad/: Adapter.SLDPRT  Battery Case.SLDPRT  Camera Case Back.SLDPRT  Camera Case Base.SLDPRT  Pi Case.SLDPRT  Pi Lid.SLDPRT
